--- a/css/style.css
+++ b/css/style.css
@@ -303,6 +303,15 @@ template {
 [hidden] {
   display: none; }
 
+.button {
+  padding: 13px 20px;
+  border: none;
+  border-radius: 2px;
+  text-transform: uppercase; }
+  .button--primary {
+    background-color: #E38873;
+    color: #fff; }
+
 .container {
   max-width: 1256px;
   margin: auto; }
@@ -310,16 +319,27 @@ template {
 .header {
   background-color: #131313;
   padding: 24px 0; }
-  .header .menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; }
-    .header .menu .logo {
-      color: #E38873;
-      text-transform: uppercase; }
-      .header .menu .logo .nav__item {
-        text-decoration: none;
-        color: #fff; }
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+.logo {
+  color: #E38873;
+  text-transform: uppercase; }
+
+.nav {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-right: 40px; }
+
+.phone {
+  color: #E38873; }
+
+.contacts__phone {
+  margin-right: 45px; }
 
 body {
   font-family: san-serif;
