feat: add Futura Book & Demi fonts

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,4 @@
-@import  'normalize'
+@import  'fonts' 
 @import  'variables'
 @import  'interface'
 @import  'grid'
@@ -6,5 +6,5 @@
 
 
 body
-  font-family: san-serif
+  font-family: 'Futura Book', san-serif
   font-size: 14px
