--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -12,15 +12,16 @@
   color: $primary
   text-transform: uppercase
 
-.nav        
-  color: $light
-  text-decoration: none
-  text-transform: uppercase    
-  margin-right: 40px
+.nav 
+  &__item       
+   color: $light
+   text-decoration: none
+   text-transform: uppercase    
+   margin-right: 40px
 
 .phone
   color: $primary
   
 .contacts
  &__phone
-  margin-right: 45px  
+   margin-right: 45px  
