--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,16 @@
   .button--primary {
     background-color: #E38873;
     color: #fff; }
+  .button--outline {
+    border: 1px solid #fff;
+    background-color: transparent;
+    color: #fff; }
 
 .container {
+  width: 85%;
   max-width: 1256px;
-  margin: auto; }
+  margin: auto;
+  border: 2px solid red; }
 
 .header {
   position: fixed;
@@ -57,16 +63,37 @@
 
 .hero {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding-top: 100px;
   background: #131313 url("../img/hero-bg.jpg") no-repeat center/cover;
   height: 100vh;
   color: #fff; }
+  .hero__content {
+    max-width: 670px; }
+  .hero__text {
+    font-size: 22px;
+    max-width: 500; }
   .hero__instagram {
     position: absolute;
     max-width: 80px;
     height: 100%;
     left: 0;
     top: 0; }
+  .hero__scroll-down {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    left: 0;
+    bottom: 0;
+    min-width: 247px;
+    min-height: 97px;
+    background-color: #131313;
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none; }
   .hero .instagram {
     justify-content: center;
     align-items: center;
@@ -78,7 +105,12 @@
       text-decoration: none;
       transform: rotate(90deg); }
   .hero .title {
-    margin: 0; }
+    margin: 0;
+    font-family: 'Yeseva One', cursive;
+    text-transform: uppercase;
+    font-size: 40px; }
+    .hero .title--primary {
+      color: #E38873; }
 
 *, *:before, *:after {
   box-sizing: border-box; }
