--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -1,15 +1,37 @@
 .hero
   position: relative
+  display: flex
+  flex-direction: column
+  justify-content: center
   padding-top: 100px
   background: $dark url('../img/hero-bg.jpg') no-repeat center / cover
   height: 100vh
   color: $light
+  &__content
+    max-width: 670px
+  &__text
+    font-size: 22px
+    max-width: 500
   &__instagram
     position: absolute
     max-width: 80px
     height: 100%
     left: 0
     top: 0
+  &__scroll-down
+    position: absolute
+    display: flex
+    align-items: center
+    justify-content: center
+    left: 0
+    bottom: 0
+    min-width: 247px
+    min-height: 97px
+    background-color: $dark
+    text-transform: uppercase
+    color: $light
+    text-decoration: none
+
   .instagram
     justify-content: center
     align-items: center
@@ -22,6 +44,12 @@
       transform: rotate(90deg)
   .title
     margin: 0
+    font-family: 'Yeseva One', cursive
+    text-transform: uppercase
+    font-size: 40px
+    &--primary
+      color: $primary
+
     
     
 
