--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,8 @@
   .hero__text {
     font-size: 22px;
     max-width: 500; }
+  .hero__button {
+    margin-right: 20px; }
   .hero__instagram {
     position: absolute;
     max-width: 80px;
