--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -12,6 +12,9 @@
   &__text
     font-size: 22px
     max-width: 500
+  &__button
+    margin-right: 20px
+
   &__instagram
     position: absolute
     max-width: 80px
