feat: add before & after elements in hero section

--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -23,6 +23,9 @@
    text-decoration: none
    text-transform: uppercase    
    margin-right: 40px
+   transition: color 0.2s
+  &:hover
+   color: $primary
 
 .phone
   color: $primary
@@ -30,3 +33,5 @@
 .contacts
  &__phone
    margin-right: 45px  
+     
+
