--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -7,8 +7,16 @@
   background: $dark url('../img/hero-bg.jpg') no-repeat center / cover
   height: 100vh
   color: $light
+  &:before
+    content: ''
+    position: absolute
+    width: 100%
+    height: 100%
+    background-color: rgba($dark, 0.7)
+    
   &__content
     max-width: 670px
+    position: relative
   &__text
     font-size: 22px
     max-width: 500
@@ -34,6 +42,15 @@
     text-transform: uppercase
     color: $light
     text-decoration: none
+    &:after
+      content: ''
+      background: url('../img/down-arrow.svg') no-repeat center
+      width: 30px
+      height: 30px
+      border: 1px solid $primary
+      border-radius: 50%
+      margin-left: 12px
+
 
   .instagram
     justify-content: center
@@ -41,10 +58,21 @@
     display: flex
     background-color: $dark
     &__link
+      display: flex
+      align-items: center
       text-transform: uppercase
       color: $primary
       text-decoration: none
       transform: rotate(90deg)
+      
+      &:after
+        content: ''
+        height: 1px
+        width: 50px
+        background-color: $primary
+        line-height: 0.8
+        margin-left: 8px
+  
   .title
     margin: 0
     font-family: 'Yeseva One', cursive
@@ -52,7 +80,12 @@
     font-size: 40px
     &--primary
       color: $primary
+    
 
+
+
+      
+  
     
     
 
