fix: fixe hover effect for the navigation block

--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -17,21 +17,28 @@
   color: $primary
   text-transform: uppercase
 
-.nav 
+.nav
   &__item       
    color: $light
    text-decoration: none
-   text-transform: uppercase    
+   text-transformcolor: uppercase    
    margin-right: 40px
    transition: color 0.2s
-  &:hover
+  
+a:hover 
    color: $primary
-
+  
+  
 .phone
   color: $primary
   
 .contacts
  &__phone
    margin-right: 45px  
-     
+          
+   
+
+  
+
+
 
