--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -21,13 +21,11 @@
   &__item       
    color: $light
    text-decoration: none
-   text-transformcolor: uppercase    
+   text-transform: uppercase    
    margin-right: 40px
-   transition: color 0.2s
-  
-a:hover 
+   transition: color 0.2s  
+  &:hover 
    color: $primary
-  
   
 .phone
   color: $primary
@@ -35,7 +33,8 @@ a:hover
 .contacts
  &__phone
    margin-right: 45px  
-          
+            
+
    
 
   
