--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,12 +2,7 @@
 @import  'variables'
 @import  'interface'
 @import  'grid'
+@import  'settings'
 @import  'templates/header'
 @import  'templates/hero'
-
-*, *:before, *:after
-  box-sizing: border-box
-
-body
-  font-family: 'Futura Book', san-serif
-  font-size: 14px
+@import  'templates/control'
