--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -19,6 +19,7 @@
   &__content
     max-width: 670px
     position: relative
+    margin-left: 60px
   &__text
     font-size: 22px
     max-width: 500
