--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@
   padding: 13px 20px;
   border: none;
   border-radius: 2px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-size: 0.93rem; }
   .button:hover {
     cursor: pointer; }
   .button--primary {
@@ -39,9 +40,12 @@
 *, *:before, *:after {
   box-sizing: border-box; }
 
+html {
+  font-size: 14px; }
+
 body {
   font-family: 'Futura Book', san-serif;
-  font-size: 14px; }
+  font-size: 1rem; }
 
 .section-title {
   text-align: center;
@@ -80,7 +84,7 @@ body {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
-  margin-right: 40px;
+  margin-right: 2.85rem;
   transition: color 0.2s; }
 
 .nav:hover {
@@ -110,12 +114,12 @@ body {
     height: 100%;
     background-color: rgba(19, 19, 19, 0.7); }
   .hero__content {
-    max-width: 670px;
+    max-width: 47.85rem;
     position: relative;
-    margin-left: 60px; }
+    margin-left: 4.28rem; }
   .hero__text {
-    font-size: 22px;
-    max-width: 500; }
+    font-size: 1.57rem;
+    max-width: 35.71rem; }
   .hero__button {
     margin-right: 20px; }
   .hero__instagram {
@@ -131,8 +135,8 @@ body {
     justify-content: center;
     left: 0;
     bottom: 0;
-    min-width: 247px;
-    min-height: 97px;
+    min-width: 17.64rem;
+    min-height: 6.92rem;
     background-color: #131313;
     text-transform: uppercase;
     color: #fff;
@@ -168,6 +172,45 @@ body {
     margin: 0;
     font-family: 'Yeseva One', cursive;
     text-transform: uppercase;
-    font-size: 40px; }
+    font-size: 2.857rem; }
     .hero .title--primary {
       color: #E3B873; }
+
+@media screen and (max-width: 1200px) {
+  html {
+    font-size: 12px; }
+  .nav__item {
+    margin-right: 1rem; } }
+
+@media screen and (max-width: 992px) {
+  .nav {
+    display: none; }
+  .hero__instagram {
+    display: none !important; }
+  .hero__content {
+    margin-left: 0; } }
+
+@media screen and (max-width: 576px) {
+  .contacts__phone {
+    margin-right: 0;
+    color: #fff;
+    text-decoration: none; }
+  .contacts__button {
+    display: none; }
+  .title {
+    font-size: 1.64rem; }
+  .hero__scroll-down {
+    display: none; }
+  .hero__content {
+    max-width: 22.86rem; }
+  .hero__text {
+    font-size: 1.29rem;
+    margin-bottom: 2.28rem; }
+  .hero__button {
+    display: block;
+    min-width: 22.86rem;
+    margin-bottom: 1.85rem; } }
+
+@media screen and (max-height: 554px) {
+  .hero__scroll-down {
+    display: none; } }
