--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -17,12 +17,12 @@
     background-color: rgba($dark, 0.7)
     
   &__content
-    max-width: 670px
+    max-width: 47.85rem
     position: relative
-    margin-left: 60px
+    margin-left: 4.28rem
   &__text
-    font-size: 22px
-    max-width: 500
+    font-size: 1.57rem
+    max-width: 35.71rem
   &__button
     margin-right: 20px
 
@@ -39,8 +39,8 @@
     justify-content: center
     left: 0
     bottom: 0
-    min-width: 247px
-    min-height: 97px
+    min-width: 17.64rem
+    min-height: 6.92rem
     background-color: $dark
     text-transform: uppercase
     color: $light
@@ -80,7 +80,7 @@
     margin: 0
     font-family: 'Yeseva One', cursive
     text-transform: uppercase
-    font-size: 40px
+    font-size: 2.857rem
     &--primary
       color: $primary
     
