feat: add block with cards in html & types file, adaptive in media file

--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -18,15 +18,15 @@
   text-transform: uppercase
 
 .nav
-  &__item       
+  &__item    
    color: $light
    text-decoration: none
    text-transform: uppercase    
    margin-right: 2.85rem
    transition: color 0.2s  
-  &:hover 
-   color: $primary
-  
+  &__item:hover 
+    color: $primary   
+    
 .phone
   color: $primary
   
@@ -34,6 +34,8 @@
  &__phone
    margin-right: 45px  
             
+   
+  
 
    
 
