--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -3,6 +3,7 @@
   display: flex
   flex-direction: column
   justify-content: center
+  align-items: flex-start
   padding-top: 100px
   background: $dark url('../img/hero-bg.jpg') no-repeat center / cover
   height: 100vh
@@ -83,15 +84,15 @@
     font-size: 2.857rem
     &--primary
       color: $primary
-    
 
 
 
-      
   
     
     
 
 
 
+  
+ 
   
