--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ body {
 
 .modal {
   position: fixed;
+  visibility: hidden;
   z-index: 199;
   left: 0;
   top: 0;
@@ -279,6 +280,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center; }
+  .modal--visible {
+    opacity: 1;
+    visibility: visible; }
   .modal__dialog {
     position: relative;
     max-width: 36.21rem;
