--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -1,5 +1,6 @@
 .modal
   position: fixed
+  visibility: hidden
   z-index: 199
   left: 0
   top: 0
@@ -11,6 +12,9 @@
   display: flex
   align-items: center
   justify-content: center
+  &--visible
+    opacity: 1
+    visibility: visible
   &__dialog
     position: relative
     max-width: 36.21rem
