--- a/sass/templates/_desing.sass
+++ b/sass/templates/_desing.sass
@@ -15,13 +15,11 @@
   background-color: $light
   width: 100%
   height: 22rem
-.col
-  flex-basis: 33%
+.col-30
   &__fon
     position: relative
     margin-top: -20rem
-    padding-left: 20px
-    padding-right: 20px
+   
 
     
     
