--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -10,10 +10,33 @@ img
  
 .section
   padding: 60px 0
+  &--dark
+    background-color: $dark
+    color: $light
   &-title
-    text-align: center
-    text-transform: uppercase
-    font-family: 'Yeseva One', cursive
+    text-align: center  
+    &--left
+      text-align: left
+    &__heading
+      text-transform: uppercase
+      font-family: 'Yeseva One', cursive
+      line-height: 138%
+      &--primery
+        color: $primary
+    &__world
+      display: flex
+      align-items: center
+      &::after
+        content: ''
+        width: 90px
+        height: 2px
+        background-color: $primary
+        margin-left: 2rem
+    &__text
+      font-size: 1.28rem
+      line-height: 2.07rem
+      max-width: 31.57rem
+    
     &__image
       display: flex
       justify-content: center
