--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -16,7 +16,16 @@
     width: 100%
     height: 100%
     background-color: rgba($dark, 0.7)
-    
+  &::after
+    content: ''
+    position: absolute
+    bottom: 0
+    left: 0
+    right: 0
+    background-color: $dark
+    width: 100%
+    height: 3.46rem  
+
   &__content
     max-width: 47.85rem
     position: relative
@@ -35,6 +44,7 @@
     top: 0
   &__scroll-down
     position: absolute
+    z-index: 3
     display: flex
     align-items: center
     justify-content: center
@@ -46,7 +56,7 @@
     text-transform: uppercase
     color: $light
     text-decoration: none
-    &:after
+    &::after
       content: ''
       background: url('../img/down-arrow.svg') no-repeat center
       width: 30px
@@ -67,16 +77,16 @@
       text-transform: uppercase
       color: $primary
       text-decoration: none
-      transform: rotate(90deg)
-      
-      &:after
+      transform: rotate(90deg)  
+      &::after
         content: ''
         height: 1px
         width: 50px
-        background-color: $primary
         line-height: 0.8
-        margin-left: 8px
-  
+        margin-left: 7px
+        background-color: $primary
+        
+     
   .title
     margin: 0
     font-family: 'Yeseva One', cursive
