--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,4 +10,5 @@
 @import  'templates/types'
 @import  'templates/modal'
 @import  'templates/desing'
+@import  'templates/footer'
 @import  'media'
