--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -37,6 +37,10 @@
   &__menu
     background-color: $dark
     padding: 4.285rem 0
+  &__map
+    max-width: 66.07rem
+    margin: auto
+    margin-bottom: 4rem
 
 
 
