--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,14 @@
   src: url("..fonts/futura/FuturaBookC.woff") format("woff"), url("..fonts/futura/FuturaBookC.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
-  font-display: wrap; }
+  font-display: swap; }
 
 @font-face {
   font-family: 'Futura Demi';
   src: url("..fonts/futura/FuturaDemiC.woff") format("woff"), url("..fonts/futura/FuturaDemiC2.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
-  font-display: wrap; }
+  font-display: swap; }
 
 .button {
   padding: 13px 20px;
@@ -382,7 +382,8 @@ img {
 
 .video__play {
   position: relative;
-  margin: auto; }
+  margin: auto;
+  cursor: pointer; }
 
 .types__section-title {
   margin-bottom: 2rem; }
