--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -6,7 +6,7 @@
     
     font-weight: normal;
     font-style: normal;
-    font-display: wrap;
+    font-display: swap;
   }
  
   @font-face {
@@ -16,5 +16,5 @@
     url('..fonts/futura/FuturaDemiC2.woff2') format('woff');
     font-weight: normal;
     font-style: normal;
-    font-display: wrap;
+    font-display: swap;
   }
